--- a/sales/templates/sales/pos_base.html
+++ b/sales/templates/sales/pos_base.html
@@ -57,10 +57,24 @@
         </a>
         <div class="d-flex text-white align-items-center">
             <span class="me-3"><i class="bi bi-person-circle me-1"></i>{{ user.username }}</span>
-            <form action="{% url 'core:logout' %}" method="post" class="d-inline">
-                {% csrf_token %}
-                <button type="submit" class="btn btn-sm btn-danger">Logout</button>
-            </form>
+            <div class="btn-group">
+                <button type="button" class="btn btn-sm btn-outline-light dropdown-toggle" data-bs-toggle="dropdown"
+                    aria-expanded="false">
+                    Menu
+                </button>
+                <ul class="dropdown-menu dropdown-menu-end">
+                    <li><a class="dropdown-item" href="{% url 'core:dashboard' %}">Admin Dashboard</a></li>
+                    <li>
+                        <hr class="dropdown-divider">
+                    </li>
+                    <li>
+                        <form action="{% url 'core:logout' %}" method="post" class="d-inline">
+                            {% csrf_token %}
+                            <button type="submit" class="dropdown-item text-danger">Logout</button>
+                        </form>
+                    </li>
+                </ul>
+            </div>
         </div>
     </nav>
 
