--- a/sales/templates/sales/pos_index.html
+++ b/sales/templates/sales/pos_index.html
@@ -9,7 +9,8 @@
     {% for table in tables %}
     <div class="col-6 col-md-4 col-lg-2 mb-4">
         <a href="{% url 'sales:pos_table_detail' table.table_id %}" class="text-decoration-none text-dark">
-            <div class="card table-card text-center h-100 border-{{ table.status|yesno:'danger,success' }}">
+            <div
+                class="card table-card text-center h-100 {% if table.status == 'OCCUPIED' %}border-danger{% else %}border-success{% endif %}">
                 <div class="card-body d-flex flex-column justify-content-center align-items-center">
                     <i class="bi bi-display display-4 mb-2 
                         {% if table.status == 'OCCUPIED' %}text-danger{% else %}text-success{% endif %}">
