Syntax quick fix

--- a/sales/templates/sales/partials/cart_detail.html
+++ b/sales/templates/sales/partials/cart_detail.html
@@ -15,8 +15,8 @@
             </div>
             <div class="text-end">
                 <span class="fw-bold d-block">${{ detail.total_price }}</span>
-                <span class="badge bg-warning text-dark" style="font-size: 0.65rem;">{{ order.get_status_display
-                    }}</span>
+                <span class="badge bg-warning text-dark" style="font-size: 0.65rem;">{{order.get_status_display}}
+                </span>
             </div>
         </div>
         {% endfor %}
