--- a/reporting/templates/reporting/partials/sales_results.html
+++ b/reporting/templates/reporting/partials/sales_results.html
@@ -34,6 +34,7 @@
                         <th>Item Name</th>
                         <th>Quantity Sold</th>
                         <th>Total Sales</th>
+                        <th></th>
                     </tr>
                 </thead>
                 <tbody>
@@ -42,6 +43,13 @@
                         <td>{{ item.menu_item__name }}</td>
                         <td>{{ item.total_qty }}</td>
                         <td>{{ item.total_sales }}</td>
+                        <td class="text-end">
+                            <button class="btn btn-sm btn-outline-primary" 
+                                hx-get="{% url 'reporting:sales_drilldown' %}?item={{ item.menu_item__name | urlquote }}&start_date={{ summary.start_date }}&end_date={{ summary.end_date }}" 
+                                hx-target="#reportResults" hx-swap="innerHTML">
+                                View Orders
+                            </button>
+                        </td>
                     </tr>
                     {% empty %}
                     <tr>
